app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-service
  namespace: dev
spec:
  selector:
    app: playground
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
