app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: playground
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`playground.192.168.56.110.nip.io`)
      kind: Rule
      services:
        - name: playground-service
          port: 80
